--- a/clientside/index.html
+++ b/clientside/index.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OLX</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="nav">
-        <div class="left">
-            <h1>OLX</h1>
+    <div class="navbar">
+        <img src="./images/OLX-Symbol.png" alt="olx">
+    <div class="search">
+        <input type="text" name="" id="filter" placeholder="Find cars,mobile Phones and more...">
+        <img src="./images/search_2.png" alt="">
+    </div>
+        <div class="dropdown" id="dropdown" onclick="profile()">
+            
         </div>
-        <div class="right">
-            <ul>
-                <li>Username</li>
-                <a href="./pages/signup.html"><li>Signup</li></a>
-                <a href="./pages/signin.html"><li>Signin</li></a>
-                <li>Add employees</li>
-            </ul>
-        </div>
+        <button>+SELL</button>
     </div>
 
 <script src="./js/index.js"></script>
