--- a/clientside/pages/signin.html
+++ b/clientside/pages/signin.html
@@ -24,7 +24,7 @@
             <button type="submit" class="btn">Sign In</button>
 
         </form>
-        <a href="./signup.html">Sign Up</a>
+        <p class="login-link"> <br> <a href="./signup.html">Sign Up</a></p> <br>
     </div>
 </div>
 <script src="../js/signin.js"></script>
