--- a/clientside/index.html
+++ b/clientside/index.html
@@ -13,10 +13,18 @@
         <input type="text" name="" id="filter" placeholder="Find cars,mobile Phones and more...">
         <img src="./images/search_2.png" alt="">
     </div>
-        <div class="dropdown" id="dropdown" onclick="profile()">
-            
+    <div  class="container" id="content">
+     
+        <img src="" alt="" id="profileImage" class="profile-image" onclick="dropdown()">
+        <div class="dropdown" id="dropdownMenu">
+            <img src="" alt="" id="img2">
+            <div class="dropdown-option" id="link"></div>
+            <div class="dropdown-option"><button onclick="logout()">Logout</button></div>
         </div>
-        <button>+SELL</button>
+        <div class="btns">
+            <button>+SELL</button>
+
+        </div>
     </div>
 
 <script src="./js/index.js"></script>
