--- a/clientside/pages/profile.html
+++ b/clientside/pages/profile.html
@@ -34,8 +34,8 @@
             <div class="button" id="edit">
                 
             </div>
-            <div class="button" style="margin-top: 25%;margin-bottom: 5%;">
-                <button>Sign Out</button>
+            <div class="button" style="margin-top: 25%;margin-bottom: 5%;" id="signout">
+                
             </div>
             <div class="button">
                 <button>Delete Account</button>
