--- a/clientside/index.html
+++ b/clientside/index.html
@@ -21,10 +21,7 @@
             <div class="dropdown-option" id="link"></div>
             <div class="dropdown-option"><button onclick="logout()">Logout</button></div>
         </div>
-        <div class="btns">
-            <button>+SELL</button>
-
-        </div>
+        <div class="btns" id="sell"></div>
     </div>
 
 <script src="./js/index.js"></script>
