--- a/clientside/pages/profile.html
+++ b/clientside/pages/profile.html
@@ -10,26 +10,26 @@
     <div class="container">
         <div class="left">
             <img src="../images/cute-woman-chuckle-holding-breath.jpg" alt="pro pic" id="profile">
-            <h2 id="username">BSDK</h2>
+            <h2 id="username"></h2>
             <div class="details">
                 <img src="../images/mail.png" alt="" id="logo">
-                <div id="email">email</div>
+                <div id="email"></div>
             </div>
             <div class="details">
                 <img src="../images/location_on_16dp_000000_FILL0_wght400_GRAD0_opsz20.png" alt="" id="logo">
-                <div id="place">place</div>
+                <div id="place"></div>
             </div>
             <div class="details">
                 <img src="../images/home_16dp_000000_FILL0_wght400_GRAD0_opsz20.png" alt="" id="logo">
-                <div id="address">address,aajhbshjbahjb,dasuhshb</div>
+                <div id="address"></div>
             </div>
             <div class="details">
                 <img src="../images/pos.png" alt="" id="logo">
-                <div id="pincode">pincode</div>
+                <div id="pincode"></div>
             </div>
             <div class="details">
                 <img src="../images/phone_android_16dp_000000_FILL0_wght400_GRAD0_opsz20.png" alt="" id="logo">
-                <div id="phone">phone</div>
+                <div id="phone"></div>
             </div>
             <div class="button" id="edit">
                 
