--- a/clientside/index.html
+++ b/clientside/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="navbar">
+<div class="navbar">
         <img src="./images/OLX-Symbol.png" alt="olx">
     <div class="search">
         <input type="text" name="" id="filter" placeholder="Find cars,mobile Phones and more...">
@@ -23,7 +23,13 @@
         </div>
         <div class="btns" id="sell"></div>
     </div>
+</div>
+    <div class="products" id="products">
+       
 
+
+
+    </div>
 <script src="./js/index.js"></script>
 </body>
 </html>
