--- a/clientside/pages/profile.html
+++ b/clientside/pages/profile.html
@@ -41,8 +41,11 @@
                 <button>Delete Account</button>
             </div>
         </div>
-        <div class="right">
 
+        <div class="right">
+            <div class="products" id="products">
+
+            </div>
         </div>
     </div>
     <script src="../js/profile.js"></script>
