--- a/clientside/pages/profile.html
+++ b/clientside/pages/profile.html
@@ -43,6 +43,13 @@
         </div>
 
         <div class="right">
+            <div class="navbar">
+           
+            <div class="search">
+                <input type="text" name="" id="filter" placeholder="Find cars,mobile Phones and more...">
+                <img src="../images/search_2.png" alt="">
+            </div>
+            </div>
             <div class="products" id="products">
 
             </div>
