--- a/clientside/pages/profile.html
+++ b/clientside/pages/profile.html
@@ -49,6 +49,19 @@
                 <input type="text" name="" id="filter" placeholder="Find cars,mobile Phones and more...">
                 <img src="../images/search_2.png" alt="">
             </div>
+            <div class="form-group">
+                <select id="category">
+                    <option value="" disabled selected>Select a category</option>
+                    <option value="electronics">Electronics</option>
+                    <option value="furniture">Furniture</option>
+                    <option value="vehicles">Vehicles</option>
+                    <option value="clothing">Clothing</option>
+                    <option value="books">Books</option>
+                    <option value="toys">Toys</option>
+                    <option value="real-estate">Real Estate</option>
+                    <option value="services">Services</option>
+                </select>
+            </div>
             </div>
             <div class="products" id="products">
 
