--- a/clientside/pages/product.html
+++ b/clientside/pages/product.html
@@ -10,20 +10,22 @@
 <body>
 
 <div class="product-container">
-    <h1 class="product-title" id="pname">Product Title</h1>
     <div class="images">
         <img src="../images/cute-woman-chuckle-holding-breath.jpg" alt="Product Image 1" id="img">
         <div class="smallimg" id="smallimg">
             
         </div>
     </div>
-    <div class="description">
-        <h1 id="description"></h1>
+    <div class="product-description">
+        <h1 id="pname"></h1>
     </div>
     <div class="price" id="price">
         Price: $XX.XX
     </div>
-    
+    <h3 class="product-title" id="category">category</h3>
+    <div class="contact-info">
+        <h1 id="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae accusantium doloremque reiciendis, nihil corrupti nulla? Consequuntur ipsum blanditiis atque amet accusamus voluptate sequi rerum praesentium hic quas corporis, maiores architecto.</h1>
+    </div>
     <div class="contact-info">
         <h3 >Contact Details</h3>
         <p id="username"></p>
@@ -39,12 +41,12 @@
     </div>
 
     <div class="buttons">
-        <button class="edit-btn">Edit</button>
+        <button class="edit-btn" id="edit">Edit</button>
         <button class="delete-btn">Delete</button>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
         <p>Posted by: Username | Date Posted: YYYY-MM-DD</p>
-    </div>
+    </div> -->
 </div>
 <script src="../js/product.js"></script>
 </body>
