--- a/clientside/pages/reset.html
+++ b/clientside/pages/reset.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,21 +13,20 @@
     
     <div class="container">
         <h1>Sign In</h1>
-        <form id="signin">
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" >
-            </div>
+        <form id="reset">
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" >
             </div>
-            <button type="submit" class="btn">Sign In</button>
-            <a href="../pages/forget.html">forget password</a>
+            <div class="form-group">
+                <label for="password">Confirm Password</label>
+                <input type="password" id="confirm-password" name="confirm-password" >
+            </div>
+            <button class="btn" onclick="submitPassword()">submit</button>
+            <div class="error-message" id="error-message"></div>
         </form>
-        <p class="login-link"> <br> <a href="./signup.html">Sign Up</a></p> <br>
     </div>
 </div>
-<script src="../js/signin.js"></script>
+<script src="../js/reset.js"></script>
 </body>
 </html>
