--- a/clientside/index.html
+++ b/clientside/index.html
@@ -15,11 +15,11 @@
     </div>
     <div  class="container" id="content">
      
-        <img src="" alt="" id="profileImage" class="profile-image" onclick="dropdown()">
+        <img src="./images/cute-woman-chuckle-holding-breath.jpg" alt="" id="profileImage" class="profile-image" onclick="dropdown()">
         <div class="dropdown" id="dropdownMenu">
-            <img src="" alt="" id="img2">
+            <img src="./images/cute-woman-chuckle-holding-breath.jpg" alt="" id="img2">
             <div class="dropdown-option" id="link"></div>
-            <div class="dropdown-option"><button onclick="logout()">Logout</button></div>
+            <div class="dropdown-option" id="log"></div>
         </div>
         <div class="btns" id="sell"></div>
     </div>
