--- a/clientside/pages/productss.html
+++ b/clientside/pages/productss.html
@@ -39,7 +39,9 @@
         <p id="place"></p>
         <p id="pincode"></p>
     </div>
-
+    <div class="book">
+        <button class="edit-btn" onclick="book()">BOOK NOW</button>
+    </div>
     <!-- <div class="buttons">
         <button class="edit-btn">Edit</button>
         <button class="delete-btn">Delete</button>
