--- a/clientside/pages/profile.html
+++ b/clientside/pages/profile.html
@@ -49,6 +49,9 @@
                 <input type="text" name="" id="filter" placeholder="Find cars,mobile Phones and more...">
                 <img src="../images/search_2.png" alt="">
             </div>
+            <div class="button">
+                <button id="book"></button>
+            </div>
             <div class="form-group">
                 <select id="category">
                     <option value="" disabled selected>Select a category</option>
