--- a/clientside/pages/product.html
+++ b/clientside/pages/product.html
@@ -42,7 +42,9 @@
 
     <div class="buttons">
         <button class="edit-btn" id="edit">Edit</button>
-        <button class="delete-btn">Delete</button>
+        <div class="delete" id="delete">
+
+        </div>
     </div>
     
     <!-- <div class="footer">
