--- a/clientside/pages/profile.html
+++ b/clientside/pages/profile.html
@@ -38,7 +38,7 @@
                 
             </div>
             <div class="button">
-                <button>Delete Account</button>
+                <button id="deletebtn" onclick="deleteAccount()">DELETE ACCOUNT</button>
             </div>
         </div>
 
