--- a/clientside/pages/orders.html
+++ b/clientside/pages/orders.html
@@ -15,7 +15,7 @@
             color: #333; /* Darker text for readability */
         }
         table {
-            width: 100%;
+            width: 850px;
             border-collapse: collapse;
             background-color: #ffffff;
             border-radius: 10px;
@@ -40,18 +40,6 @@
             background-color: #e2e6ea; /* Highlight row on hover */
         }
         .button {
-            background-color: #3fa72b;
-            color: white;
-            border: none;
-            padding: 8px 12px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .button:hover {
-            background-color: #217211;
-        }
-        .buttons {
             background-color: #ff4d4d;
             color: white;
             border: none;
@@ -60,8 +48,8 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
-        .buttons:hover {
-            background-color: #66210c;
+        .button:hover {
+            background-color: #ff1a1a;
         }
         .product-image {
             width: 100px; /* Set width for image */
@@ -91,6 +79,6 @@
         </table>
     </div>
     
-    <script src="../js/booking.js"></script>
+    <script src="../js/orders.js"></script>
 </body>
 </html>
