--- a/clientside/pages/profile.html
+++ b/clientside/pages/profile.html
@@ -38,6 +38,9 @@
                 
             </div>
             <div class="button">
+                <button id="book"></button>
+            </div>
+            <div class="button">
                 <button id="deletebtn" onclick="deleteAccount()">DELETE ACCOUNT</button>
             </div>
         </div>
@@ -50,7 +53,7 @@
                 <img src="../images/search_2.png" alt="">
             </div>
             <div class="button">
-                <button id="book"></button>
+                <button id="orders"></button>
             </div>
             <div class="form-group">
                 <select id="category">
